Minor Tweaks
Changed configuration files and cleared some unnecessary data